--- a/css/main.css
+++ b/css/main.css
@@ -508,11 +508,11 @@ button:focus {
 }
 
 .bg-white .navbar-nav .nav-link:hover {
-  color: #F97794 !important;
+  color: #f39c12 !important;
 }
 
 .bg-white .navbar-nav .active {
-  color: #F97794 !important;
+  color: #f39c12 !important;
 }
 
 .close-button {
