--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ body {
   color: #546E7A;
   font-size: 14px;
   font-weight: 400;
-  background: #fff;
+  background: #212121;
+  color: #ffffff;
   overflow-x: hidden;
 }
 
@@ -20,7 +21,7 @@ html {
 
 p {
   font-size: 14px;
-  color: #546E7A;
+  color: #adadad;
   line-height: 26px;
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 0;
@@ -96,7 +97,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
-  color: #263238;
+  color: #c91a09;
   position: relative;
 }
 
@@ -114,7 +115,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 .section-header span {
   font-size: 60px;
-  color: rgba(0, 0, 0, 0.07);
+  color: rgba(255, 255, 255, 0.07);
   z-index: 2;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
@@ -481,6 +482,14 @@ button:focus {
 .menu-button:hover {
   cursor: pointer;
   opacity: #eee;
+}
+
+.navbar-bg-dark {
+  background-color: #212121;
+}
+
+.navbar-expand-md .navbar-nav .nav-link.text-gray {
+  color: #adadad;
 }
 
 .bg-white {
@@ -1952,7 +1961,7 @@ button:focus {
   font-size: 14px;
   border-radius: 30px;
   border: 1px solid transparent;
-  background: #f5f5f5;
+  background: #adadad;
   -webkit-transition: all 0.3s;
   -moz-transition: all 0.3s;
   transition: all 0.3s;
@@ -1985,6 +1994,7 @@ textarea {
   margin-top: 5px;
   font-size: 18px;
   font-weight: 500;
+  color: #c91a09;
 }
 
 .contact-info p {
@@ -1993,7 +2003,8 @@ textarea {
 }
 
 #contact {
-  background: #ffffff;
+  background-color: #212121;
+  color: #ffffff;
   position: relative;
   overflow: hidden;
 }
@@ -2176,16 +2187,20 @@ textarea {
 .block-title {
   font-size: 14px;
   font-weight: 500;
-  color: #263238;
+  color: #adadad;
   margin-bottom: 30px;
   text-transform: uppercase;
   position: relative;
 }
 
 footer .footer-Content {
-  background-color: #ffffff;
+  background-color: #212121;
   padding: 60px 0;
-  color: #546E7A;
+  color: #adadad;
+}
+
+footer h3 {
+  color: #c91a09;
 }
 
 .textwidget {
@@ -2195,7 +2210,7 @@ footer .footer-Content {
 }
 
 .textwidget p {
-  color: #546E7A;
+  color: #adadad;
 }
 
 footer .menu {
@@ -2207,7 +2222,7 @@ footer .menu li {
 }
 
 footer .menu li a {
-  color: #546E7A;
+  color: #adadad;
 }
 
 footer .menu li a:hover {
@@ -2235,7 +2250,7 @@ footer .menu li a:hover {
 }
 
 .contact-footer li span a {
-  color: #546E7A;
+  color: #ffffff;
 }
 
 .contact-footer li span a:hover {
@@ -2294,9 +2309,9 @@ footer .menu li a:hover {
 }
 
 #copyright {
-  background-color: #ffffff;
+  background-color: #212121;
   padding: 20px 0 10px;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid #adadad;
   color: #546E7A;
 }
 
