--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ button:focus {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #263238;
+  background: #212121;
   z-index: 9999999999;
 }
 
@@ -341,7 +341,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #F97794;
+  background-color: #e63707;
   opacity: 0.6;
   position: absolute;
   top: 0;
