更新字體大小寫名稱

--- a/css/line-icons.css
+++ b/css/line-icons.css
@@ -11,7 +11,7 @@
 
 @font-face {
   font-family: 'Stzhongs';
-  src:  url('../fonts/STZHONGS.ttf');
+  src:  url('../fonts/STZHONGS.TTF');
   font-weight: normal;
   font-style: normal;
 }
