--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,11 @@ h1, h2, h3, h4, h5 {
   color: #263238;
 }
 
+h6 {
+  font-family: 'Stzhongs', sans-serif;
+  font-weight: 500;
+}
+
 ul {
   margin: 0;
   padding: 0;
@@ -488,9 +493,15 @@ button:focus {
   background-color: #212121;
 }
 
+.text-gray,
 .navbar-expand-md .navbar-nav .nav-link.text-gray {
   color: #adadad;
 }
+
+.modal-content.bg-dark {
+  background-color: #212121 !important;
+}
+
 .menu-bg.navbar-expand-md .navbar-nav .nav-link.text-gray {
   color: #adadad;
 }
@@ -549,12 +560,13 @@ button:focus {
 }
 
 .navbar-expand-md .navbar-nav .active::before,
+.navbar-expand-md .navbar-nav .is-active::before,
 .navbar-expand-md .navbar-nav .nav-link:hover::before {
   width: 50%;
 }
 
 .navbar-brand img {
-  max-width: 115px;
+  max-width: 130px;
 }
 
 .navbar-expand-md .navbar-nav .nav-link:focus,
@@ -2401,4 +2413,45 @@ footer .menu li a:hover {
 .counter-item .fact-count h4 {
   font-size: 18px;
   margin-bottom: 0;
+}
+
+.choose-container{
+  margin-top:100px;
+  margin-bottom:100px;
+}
+
+.choose-container .carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
+
+#custCarousel .carousel-indicators {
+position: static;
+margin-top:20px;
+}
+
+#custCarousel .carousel-indicators > li {
+width:100px;
+}
+
+#custCarousel .carousel-indicators li img {
+display: block;
+opacity: 0.5;
+}
+
+#custCarousel .carousel-indicators li.active img {
+opacity: 1;
+}
+
+#custCarousel .carousel-indicators li:hover img {
+opacity: 0.75;
+}
+
+.choose-container .carousel-item img{
+
+width:80%;
+}
+
+.modal-backdrop.show {
+  opacity: .9;
 }
