修改選擇攝影棚頁面

--- a/css/colors/red.css
+++ b/css/colors/red.css
@@ -156,3 +156,11 @@ footer .menu li a:hover{
 .btn-red {
 	background-color: #e63707;
 }
+
+.bg-red {
+	background-color: #e63707;
+}
+
+.bg-gray, hr {
+	background-color: #adadad;
+}
