--- a/css/main.css
+++ b/css/main.css
@@ -41,9 +41,7 @@ a {
 
 h1, h2, h3, h4, h5 {
   font-family: 'Stzhongs', sans-serif;
-  font-size: 40px;
   font-weight: 500;
-  color: #263238;
 }
 
 h6 {
@@ -58,6 +56,12 @@ ul {
 
 ul li {
   list-style: none;
+}
+
+.section-group:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+  transition: all 0.6s ease;
 }
 
 a:hover,
