--- a/css/main.css
+++ b/css/main.css
@@ -58,8 +58,7 @@ ul li {
   list-style: none;
 }
 
-.section-group:hover {
-  cursor: pointer;
+.section-group:hover img {
   transform: scale(1.05);
   transition: all 0.6s ease;
 }
