--- a/css/main.css
+++ b/css/main.css
@@ -1899,12 +1899,43 @@ input[type=date] {
   background-color: #adadad;
 }
 
+.select-group {
+  padding-right: 15px;
+  background-color: #adadad;
+  border-radius: 99rem;
+}
+
+select {
+  height: 50px;
+}
+
 .timefieldwrapperBooking.timeStart {
   border-radius: 30px 0 0 30px;
+  /* padding-right: 15px; */
+}
+
+.timefieldwrapperBooking.timeStart select {
+  padding-left: 25px;
+  padding-right: 25px;
+  appearance: none;
+  text-align: center;
+}
+
+select.form-control {
+  background: transparent !important;
+  border: none !important;
 }
 
 .timefieldwrapperBooking.timeEnd {
   border-radius: 0 30px 30px 0;
+  /* padding-right: 15px; */
+}
+
+.timefieldwrapperBooking.timeEnd select {
+  padding-left: 25px;
+  padding-right: 25px;
+  appearance: none;
+  text-align: center;
 }
 
 .timefieldwrapperBooking select {
