--- a/css/main.css
+++ b/css/main.css
@@ -1926,6 +1926,11 @@ select.form-control {
   border: none !important;
 }
 
+.fs-18 {
+  font-size: 16px;
+  line-height: 30px;
+}
+
 .timefieldwrapperBooking.timeEnd {
   border-radius: 0 30px 30px 0;
   /* padding-right: 15px; */
