--- a/css/main.css
+++ b/css/main.css
@@ -1928,7 +1928,8 @@ select.form-control {
 
 .fs-18 {
   font-size: 16px;
-  line-height: 30px;
+  line-height: 35px;
+  font-family: 'Stzhongs', sans-serif;
 }
 
 .timefieldwrapperBooking.timeEnd {
