--- a/css/main.css
+++ b/css/main.css
@@ -1900,14 +1900,169 @@ input[type=date] {
 }
 
 .select-group {
+  height: 55px;
   padding-right: 15px;
   background-color: #adadad;
   border-radius: 99rem;
 }
 
-select {
+.select-group select {
   height: 50px;
+  margin: 0 !important;
 }
+
+/* Loader 8 */
+#loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.loaderBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 100px;
+}
+.loader {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: 3em;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+}
+.loader,
+.loader:before,
+.loader:after {
+  animation: 1s infinite ease-in-out;
+}
+.loader:before,
+.loader:after {
+  width: 100%; 
+  height: 100%;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+} 
+
+
+
+.loader-2:before,
+.loader-2:after {
+    content: '';
+}
+.loader-2:before {
+    border: 1px solid #e63707;
+    top: -1px;
+    left: -1px;
+    opacity: 0;
+    animation-name: loader2-1;
+}
+
+    @keyframes loader2-1 {
+        0% { transform: scale(1); opacity: 1; }
+        50% { transform: scale(1.2); opacity: 0; }
+        100% { transform: scale(1.2); opacity: 0; }
+    }
+
+.loader-2:after {
+  background-image: url('../img/loader.png');
+  background-size: 100% 100%;
+  animation-name: loader2-2;
+}
+
+@keyframes loader2-2 {
+    0% { transform: scale(1); }
+    50% { transform: scale(0.8); }
+    100% { transform: scale(1); }
+}
+
+
+.loaderText{
+  display: flex;
+  width: 900px;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  font-size: 40px;
+  font-family: 'Stzhongs', sans-serif;
+  margin-top: -250px;
+}
+.static-text {
+  white-space: nowrap;
+}
+.dynamic-text {
+  position: relative;
+  white-space: nowrap;
+  color: #e63707;
+}
+.dynamic-text:before {
+  content: '';
+  position: absolute;
+  border-left: solid 1px #e63707;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  background: #212121;
+  animation: typewriter 3s steps(6) infinite, blink 0.5s steps(6) infinite;
+}
+@keyframes typewriter {
+  40%, 60% {
+    left: 100%;
+ }
+  100% {
+    left: 0;
+ }
+}
+@keyframes blink {
+  from {
+    border-left: solid 1px #e63707;
+ }
+  to {
+    border-left: solid 1px transparent;
+ }
+}
+/* .dynamic-text-wrapper {
+  position: relative;
+  top: 0px;
+  animation: moveup 12s steps(3) infinite;
+}
+@keyframes moveup {
+  0% {
+    top: 0;
+ }
+  100% {
+    top: -150px;
+ }
+} */
+
+/*     
+    .typing{
+      font-size: 1rem;
+      padding-top: 6%;
+      margin-bottom: 5%;
+      font-weight: normal;
+      letter-spacing: .3rem;
+      -webkit-animation: type 5s steps(50, end) forwards;
+      animation: type 5s steps(50, end) forwards;
+      }
+      .typing-item{
+      text-align: center;
+      color: black;
+      width:100%;
+      white-space:nowrap;
+      overflow:hidden;
+      }
+      @-webkit-keyframes type{
+      from { width: 0;}
+      }
+      @keyframes type{
+      from { width: 0;}
+      } */
 
 .timefieldwrapperBooking.timeStart {
   border-radius: 30px 0 0 30px;
@@ -2490,33 +2645,59 @@ footer .menu li a:hover {
   height: 100%;
 }
 
+#custCarousel .carousel-item {
+  height: 500px;
+  width: 100%;
+  justify-content: center;
+  align-content: center;
+}
+
+#custCarousel .carousel-item-next, .carousel-item-prev, .carousel-item.active {
+  display: grid;
+}
+
 #custCarousel .carousel-indicators {
-position: static;
-margin-top:20px;
+  position: static;
+  margin-top: 20px;
+  margin-left: 6%;
+  margin-right: 6%;
 }
 
 #custCarousel .carousel-indicators > li {
-width:100px;
+  width: 100px;
 }
 
 #custCarousel .carousel-indicators li img {
-display: block;
-opacity: 0.5;
+  display: block;
+  opacity: 0.5;
 }
 
 #custCarousel .carousel-indicators li.active img {
-opacity: 1;
+  opacity: 1;
 }
 
 #custCarousel .carousel-indicators li:hover img {
-opacity: 0.75;
+  opacity: 0.75;
 }
 
 .choose-container .carousel-item img{
+  width: 101%;
+  height: 100%;
+  margin: 0 auto;
+}
 
-width:80%;
+#custCarousel .carousel-control-prev {
+  left: -55px;
+}
+
+#custCarousel .carousel-control-next {
+  right: -55px;
 }
 
 .modal-backdrop.show {
   opacity: .9;
+}
+
+.border-top {
+  border-top: 1px solid #adadad !important;
 }
