--- a/css/main.css
+++ b/css/main.css
@@ -1922,7 +1922,7 @@ input[type=date] {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  /* margin-top: 100px; */
 }
 .loader {
   width: 100px;
